[project]
name = "google-maps-scraper-replit"
version = "1.0.0"
description = "Google Maps Scraper per Replit - Estrazione dati aziendali con gestione multi-progetto"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.41.1",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[project.scripts]
scraper = "main:main"
